@@ -1,3 +1,6 @@
+Pre-release
+    - Significant speedup in pyqpp's compilation time
+
 Version 4.3.4 - 14 August 2023
     - Docker update, see the ["docker/"] directory
     - Fix in ["types.hpp"] for defaulting types when not using CMake
